border bottom too big on mobile. Fixed.

--- a/css/filter.css
+++ b/css/filter.css
@@ -49,14 +49,14 @@
 .filter-items li:hover p, .filter-items li a:focus p {
   transition: border-bottom 300ms ease;
   border-bottom: 5px solid #f16462;
-  border-bottom: 125px solid #f16462;
+  border-bottom: 4em solid #f16462;
   color: #fff;
   mix-blend-mode: screen;
   z-index: 3000;
   width: 80%;
   opacity: .9;
-
 }
+
 
 .filter-items li:hover img, .filter-items li a:focus img {
   transition: all 300ms ease-in-out;
